# SWE-Together

./: .env.example  .gitignore  LICENSE  README.md  canonical_full109.json  launch.py  pyproject.toml  system_overview.md
data-pipeline/: EXTRACTION.md  README.md  agent_session.schema.json  canonical_patch.schema.json
data-pipeline/artifacts_swechat/: funnel.md  step2_candidates.json  step2_run_config.json  step5_patch_viability.json  step5_recovered_from_rejected.json
data-pipeline/curator_results/: _base_commit_audit.json  _smell_sweep.json  _synthesis.json  agent-swarm-implement-e71acf.json  agent-swarm-task-4a881b.json  agent-swarm-task-c020d6.json  agent-swarm-task-ea4bd8.json  amytis-implement-3b6cb5.json  amytis-task-103a94.json  amytis-task-1fbe09.json  (+130 more)
eval/: FILTER_DESIGN.md  canonical_plan.example.json  eval_design.md  pilot_study.md  pilot_study_two_way.md  run_eval.py  swe-together-lite-0531.md
harbor_tasks/: README.md  nunchaku-implement-019bdb  triton-task-ses_37-77ab
site/: _gen_trial_user_simulator.py  app.js  build_tasks_json.py  design.html  index.html  styles.css  tasks.html  tasks.js  tasks.json  trial_user_simulator.html  trial_user_simulator.md
src/: canonical_tracker.py  config.yaml  eval_infra_sentinel.py  fix_tasks.py  lint_tests.py  run_eval.py  runner.py  test_manifest.py  validate_tasks.py
task_split/: new_29_diverse.txt  person_A.txt  person_B.txt  person_C.txt  person_D.txt  person_E.txt
tasks/: README.md
trials_oracle_lite70/: OPENCODE_OPUS_GAP_ANALYSIS.md
user_agent/: user_agent.py  user_enabled_agent.py
(+2628 files in other folders)
