[project]
name = "multi-user-turn-codebench"
version = "0.1.0"
description = "Multi-turn coding benchmark tooling and runner."
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "litellm>=1.82.4",
    "pyyaml>=6.0.3",
    "harbor",
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = false

[tool.uv.sources]
harbor = { path = "external/harbor", editable = true }
