[project]
name = "swe-together"
version = "1.0"
description = "SWE-Together benchmark tooling and runner."
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "litellm>=1.82.4",
    "pyyaml>=6.0.3",
    "harbor",
    "python-dotenv>=1.2.2",
    "boto3>=1.42.73",
]

[tool.uv]
package = false

[tool.uv.sources]
harbor = { path = "external/harbor", editable = true }
